--- a/ritleadmin.css
+++ b/ritleadmin.css
@@ -3,3 +3,58 @@
     padding: 5px 0;
     width: 35%;
 }
+
+.ritle-admin {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    -ms-grid-row-align: center;
+    align-items: center;
+    padding: 5px 45px 5px 20px;
+    border: 0 none;
+    box-shadow: none;
+    color: #FFF;
+    background: #2e3243;
+    margin: 6px 25px 21px 0px;
+}
+
+.ritle-page {
+	position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    -ms-grid-row-align: center;
+    align-items: center;
+    padding: 5px 45px 5px 20px;
+    border: 0 none;
+    box-shadow: none;
+    color: #FFF;
+    background: #2e3243;
+    margin-top: 30px;
+}
+
+.button-ritle {
+    height: auto;
+    font-weight: 600 !important;
+    font-size: 14px !important;
+    box-shadow: 0 3px 0 rgba(0,0,0,.15) !important;
+    border: 0 none !important;
+    padding: 1px 18px !important;
+    background: #40B1D0 !important;
+    text-shadow: 1px 1px 1px rgba(0,0,0,.2) !important;
+    margin-left: 20px !important;
+}
+
+
+
+
+
